[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/Bottom UI v 2.png" type="Texture" id=1]
[ext_resource path="res://art/Buttons/Pause Button.png" type="Texture" id=2]
[ext_resource path="res://art/Buttons/Plus Ten Seconds Button.png" type="Texture" id=3]
[ext_resource path="res://art/Buttons/Mallet Button.png" type="Texture" id=4]
[ext_resource path="res://art/Buttons/Make Color Bomb Button.png" type="Texture" id=5]
[ext_resource path="res://scripts/bottom_ui.gd" type="Script" id=6]
[ext_resource path="res://scripts/Booster.gd" type="Script" id=7]
[ext_resource path="res://scripts/BoosterManager.gd" type="Script" id=8]

[node name="bottom_ui" type="TextureRect"]
margin_top = 960.0
margin_right = 576.0
margin_bottom = 1052.0
texture = ExtResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 20.0
margin_right = 557.0
margin_bottom = 80.0
custom_constants/margin_right = 0
custom_constants/margin_top = -50
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_top = -50.0
margin_right = 537.0
margin_bottom = 80.0
custom_constants/separation = 36
alignment = 1
script = ExtResource( 8 )

[node name="Pause" type="TextureButton" parent="MarginContainer/HBoxContainer"]
margin_left = 14.0
margin_right = 114.0
margin_bottom = 130.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="Booster1" type="TextureButton" parent="MarginContainer/HBoxContainer" groups=[
"Boosters",
]]
margin_left = 150.0
margin_right = 250.0
margin_bottom = 130.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
script = ExtResource( 7 )
color_bomb_texture = ExtResource( 5 )
add_counter_bomb_texture = ExtResource( 3 )
destroy_piece_bomb_texture = ExtResource( 4 )

[node name="Booster2" type="TextureButton" parent="MarginContainer/HBoxContainer" groups=[
"Boosters",
]]
margin_left = 286.0
margin_right = 386.0
margin_bottom = 130.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
script = ExtResource( 7 )
color_bomb_texture = ExtResource( 5 )
add_counter_bomb_texture = ExtResource( 3 )
destroy_piece_bomb_texture = ExtResource( 4 )

[node name="Booster3" type="TextureButton" parent="MarginContainer/HBoxContainer" groups=[
"Boosters",
]]
margin_left = 422.0
margin_right = 522.0
margin_bottom = 130.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5
script = ExtResource( 7 )
color_bomb_texture = ExtResource( 5 )
add_counter_bomb_texture = ExtResource( 3 )
destroy_piece_bomb_texture = ExtResource( 4 )
[connection signal="pressed" from="MarginContainer/HBoxContainer/Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Booster1" to="." method="_on_Booster1_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Booster2" to="." method="_on_Booster2_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Booster3" to="." method="_on_Booster3_pressed"]
